[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.reports"
description = "oslo.reports library"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.reports"
Repository = "https://opendev.org/openstack/oslo.reports"

[project.optional-dependencies]
greenlet = [
    "greenlet>=0.4.15",
]

[project.entry-points."oslo.config.opts"]
"oslo.reports" = "oslo_reports.opts:list_opts"

[tool.setuptools]
packages = ["oslo_reports"]
