[metadata]
name = oslo.reports
summary = oslo.reports library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.reports/latest
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_reports

[entry_points]
oslo.config.opts =
    oslo.reports = oslo_reports.opts:list_opts

[compile_catalog]
directory = oslo_reports/locale
domain = oslo_reports

[update_catalog]
domain = oslo_reports
output_dir = oslo_reports/locale
input_file = oslo_reports/locale/oslo_reports.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_reports/locale/oslo_reports.pot
